# nabi_core

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
config/: builtin.toml  global.toml  midi.toml  order.toml
examples/: basic_demo.rs  cc_demo.rs  choice_demo.rs  just_tempered_demo.rs  legato_2_voices_example.rs  msg_view_demo.rs  show_sound_values.rs  stereo_demo.rs  well_tempered_demo.rs
midi_config/: midi.toml
patches/: KS Guitar-2026-06-25_15-34-22.811.toml  ks_guitar.toml  ks_plastic_pipe.toml  morph2 Agibbon-2026-06-09_14-50-32.567.toml  morph2-1.toml  morph2-2.toml  patches.toml  square_saw._toml  square_saw.toml  super_osc.toml  super_triangle.toml
patches_config/: builtin.toml  community.toml
src/: backend.rs  config.rs  config_builder.rs  consts.rs  effects.rs  effects_builders.rs  eqs.rs  instruments.rs  io.rs  lib.rs  main.rs  modulators.rs  oximedia_effects.rs  patch_builder.rs  patch_builders.rs  patch_helpers.rs  sound_builders.rs  sounds.rs  synthio.rs  tui.rs  tunings.rs
src/common/: adapters.rs  cc.rs  envelopes.rs  fm.rs  helpers.rs  mod.rs  modulators.rs  params.rs  waveshapers.rs
src/common_definitions/: helpers.rs  params.rs
src/community/sounds/: midi_fundsp.rs
src/community_patches/: midi_fundsp_sounds.rs  mod.rs
src/effects/: delays.rs  effects_building.rs  eqs.rs  helpers.rs  master_fx.rs  master_stereo_fx.rs  mod.rs  modulators.rs  oximedia_stereo_effects.rs  params.rs  pitch_modulation.rs  wrappers.rs
src/factories/: mod.rs
src/helpers/: cc.rs  fundsp.rs  mod.rs
src/io/: midi.rs  mod.rs  synth.rs  threads.rs
src/ios/: display.rs  midi.rs  mod.rs  synth.rs  threading.rs  threads.rs
src/sound_engine/: common.rs  instruments.rs  karplus_strong.rs  mod.rs  morph_synth.rs  morph_synths.rs  params.rs  proph6.rs  sound_building.rs  sounds.rs  super_osc.rs
src/tuning/: mod.rs  tunings.rs
