[package]
name = "nabi_core"
version = "0.1.0"
edition = "2024"
description = "Enables creation of live MIDI synthesizer software."
readme = "README.md"
homepage = "https://github.com/gjf2a/nabi_core"
repository = "https://github.com/gjf2a/nabi_core"
license = "MIT OR Apache-2.0"
keywords = ["music", "midi", "synthesizer", "synth", "audio"]
categories = ["hardware-support", "multimedia::audio"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fundsp = {version = "0.23.0", features = ["std", "fft"]}
midir = "0.11.0"
cpal = "0.17.3"
anyhow = "1.0.102"
midi-msg = "0.8.2"
bare_metal_modulo = "1.2.6"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
read_input = "0.8.6"
float_eq = "1.0.1"
fastrand = "2.4.1"
inventory = "0.3.24"
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"
oximedia-effects = "0.1.6"