[package]
name = "nabi_core"
version = "0.1.0"
edition = "2024"
description = "Live MIDI-conrolled synthesthis and effects engine"
readme = "README.md"
homepage = "https://github.com/GalOzRlz/nabi_core"
repository = "https://github.com/GalOzRlz/nabi_core"
license = "MIT OR Apache-2.0"
keywords = ["music", "midi", "synthesizer", "synth", "audio"]
categories = ["hardware-support", "multimedia::audio"]
default-run = "nabi_core"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fundsp = {version = "0.23.0", features = ["std"]}
midir = "0.11.0"
cpal = { version = "0.18.1",  features = ["realtime", "realtime-dbus"] }
anyhow = "1.0.102"
midi-msg = "0.9.0"
bare_metal_modulo = "1.2.6"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
read_input = "0.8.6"
float_eq = "1.0.1"
fastrand = "2.4.1"
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"
linkme = "0.3.36"
circular-buffer  = "1.2.0"
chrono = "0.4.44"
globwalk = "0.9.1"
petname = "3.0.0"
core_affinity2 = "0.15.4"
nix = { version = "0.31.3", features = ["sched"] }

[features]
profile-callback = []